fix: modal issue now covers entire page even if page is scrolled

--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -1,5 +1,5 @@
 .modalWrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
@@ -32,3 +32,5 @@
   width: 30px;
   height: 30px;
 }
+
+
